# spot_ros

my_grasping/: CMakeLists.txt  package.xml
my_grasping/src/: image_box.py  listener.py  object_to_grasp.py  walk_to_obj.py
spot_driver/: CMakeLists.txt  package.xml  setup.py
spot_driver/doc/: door_opener.py
spot_driver/launch/: driver.launch
spot_driver/src/spot_driver/: spot_ros.py  spot_wrapper.py
spot_driver/src/spot_driver/arm/: arm_wrapper.py  grasp_provider.py  test_grasp.py
spot_driver/src/spot_driver/arm/arm_utilities/: fetch.py
spot_msgs/: CMakeLists.txt
spot_msgs/action/: OpenDoor.action
spot_msgs/srv/: ArmForceTrajectory.srv  GripperAngleMove.srv  HandPose.srv  OpenDoor.srv  SpotPosition.srv
